          operation lists that do not correspond to a known space group.
        - updated the get_space_group_number() subroutine to report space
          group number values that are not integers in the range of [1, 230].
        - added several more alternative space group data names in
          the space_group_data_names() subroutine.
    - COD::CIF::Data::CIF2COD::
        - updated the cif2cod() subroutine to only output the space group IT
          number that is explicitly provided instead of trying to infer it from
          the symmetry operation list.
  * Fixed:
    - COD::CIF::Data:
        - updated the get_space_group_number() subroutine to ignore
          CIF special values.
    - running Graph::Nauty tests only once.
  * Removed:
    - dependency installer for Debian 9.

cod-tools (3.6.0)

  * Added:
    - COD::CIF::Data:
        - the get_space_group_number() subroutine.
    - cif_molecule:
        - implemented the copying of the '_atom_type_symbol' and
          '_atom_type_oxidation_number' data items from the input
          file to the output file.
        - started recoding the space group IT number of
          the input crystal structure in the output as
          the '_cod_molecule_space_group_IT_number' data item.
    - dependency installer for Fedora 36.
    - dependency installer for LinuxMint 21.
  * Changed:
    - COD::CIF::Data::CIF2COD:
        - reworded a warning message generated by
          the get_space_group_h_m_symbol() subroutine
          to be more specific.
        - the optional 'sgNumber' output field.
    - cif_ddlm_dic_check:
        - updated the checks to no longer report the presence of
          the '_category_key.name' attribute in Set category
          definitions as incorrect.
  * Fixed:
    - COD::AtomNeighbours:
        - not adding duplicate bonds between the same atoms in
          neighbour_list_from_cif().
    - COD::Spacegroups::Lookup::COD: