@@ -31,15 +31,21 @@ scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, data items ['_spa
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, unit cell summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['?', '42'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['?', '42'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_13: WARNING, unit cell summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '42'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '42'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_14: WARNING, unit cell summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, no Hall space group symbol found.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '?'] -- none of these CIF special values will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
+scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '?'] -- none of these CIF special values will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, unit cell summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 file;sgNumber
 "1";NULL
