@@ -8,8 +8,11 @@ scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_8: WARNING, could no
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_9: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_10: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_12: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['?', '41'] -- the '41' value will be used.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_12: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_13: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '41'] -- the '41' value will be used.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_13: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_14: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['.', '?'] -- none of these CIF special values will be used.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_14: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_15: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['seven', '7'] -- the 'seven' value will be used.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_15: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
