@@ -10,6 +10,9 @@ cod-tools (unreleased)
           group number values that are not integers in the range of [1, 230].
         - added several more alternative space group data names in
           the space_group_data_names() subroutine.
+        - updated the get_sg_data() subroutine to also report space group
+          information mismatches even when one of the values is a CIF special
+          value. 
     - COD::CIF::Data::CIF2COD::
         - updated the cif2cod() subroutine to only output the space group IT
           number that is explicitly provided instead of trying to infer it from
